@@ -786,8 +786,8 @@ public abstract class AbstractFileSystem {
 
   /**
    * The specification of this method matches that of
-   * {@link FileContext#listLocatedStatus(Path)} except that Path f must be for this
-   * file system.
+   * {@link FileContext#listLocatedStatus(Path)} except that Path f 
+   * must be for this file system.
    */
   protected Iterator<LocatedFileStatus> listLocatedStatus(final Path f)
       throws AccessControlException, FileNotFoundException,
@@ -795,15 +795,28 @@ public abstract class AbstractFileSystem {
     return new Iterator<LocatedFileStatus>() {
       private Iterator<FileStatus> itor = listStatusIterator(f);
       
+      /**
+       *  {@inheritDoc}
+       *  @return {@inheritDog} 
+       *  @throws Runtimeexception if any IOException occurs during traversal;
+       *  the IOException is set as the cause of the RuntimeException
+       */
       @Override
       public boolean hasNext() {
         return itor.hasNext();
       }
       
+      /**
+       *  {@inheritDoc}
+       *  @return {@inheritDoc} 
+       *  @throws Runtimeexception if any IOException occurs during traversal;
+       *  the IOException is set as the cause of the RuntimeException
+       *  @exception {@inheritDoc}
+       */
       @Override
       public LocatedFileStatus next() {
         if (!hasNext()) {
-          throw new NoSuchElementException();
+          throw new NoSuchElementException("No more entry in " + f);
         }
         FileStatus result = itor.next();
         try {
